syntax = "proto3";

option csharp_namespace = "ZeafloServer.Proto.PasswordResetTokens";

import "PasswordResetTokens/Models.proto";

service PasswordResetTokensApi {
  rpc GetByIds(GetPasswordResetTokensByIdsRequest) returns (GetPasswordResetTokensByIdsResult);
}
